Fix: contact button responsiveness
Cut off at smaller screens - removing the css width attribute fixed the issue.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -902,7 +902,6 @@ body {
                 display: block;
                 margin-right: auto;
                 margin-left: auto;
-                width: 15%;
                 
                 font-family: 'Josefin Sans', sans-serif;
                 text-transform: uppercase;
